Fix links in footer

--- a/source/index.html
+++ b/source/index.html
@@ -564,8 +564,8 @@ processingFunction
           </p>
           <a class="conclusion__link content-block__link" href="https://vk.com/maltesersing">Автор статьи (Вконтакте)</a>
           <a class="conclusion__link content-block__link" href="https://github.com/Evafan1337">GitHub автора</a>
-          <a class="conclusion__link content-block__link" href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Array/Reduce">Исходный код проекта</a>
-          <a class="conclusion__link content-block__link" href="https://vk.com/alexey_ananyev">Дизайнер фона и анимации</a>
+          <a class="conclusion__link content-block__link" href="https://github.com/Evafan1337/js-array-training">Исходный код проекта</a>
+          <a class="conclusion__link content-block__link" href="https://vk.com/alexey_ananyev">Дизайнер фона и анимации (Вконтакте)</a>
 
         </div>
       </div>
